@@ -57,110 +57,6 @@ WX_DEFINE_OBJARRAY(guListViewColumnArray);
 
 
 // -------------------------------------------------------------------------------- //
-// guListViewHeader
-// -------------------------------------------------------------------------------- //
-class guListViewHeader : public wxWindow
-{
-  protected:
-    guListView *            m_Owner;
-    guListViewClient *      m_ListViewClient;
-    wxImageList *           m_ImageList;
-    guListViewColumnArray * m_Columns;
-    int                     m_Width;
-    wxCursor *              m_ResizeCursor;
-    int                     m_IsDragging;
-    int                     m_DragOfset;
-
-    void OnMouse( wxMouseEvent &event );
-    void OnPaint( wxPaintEvent &event );
-    void OnSetFocus( wxFocusEvent &event );
-    void AdjustDC( wxDC &dc );
-    void OnEditColumns( void );
-    void OnCaptureLost( wxMouseCaptureLostEvent &event );
-
-  public:
-    guListViewHeader();
-
-    guListViewHeader( wxWindow * parent,
-                        guListViewClient * owner,
-                        guListViewColumnArray * columns,
-                        const wxPoint &pos = wxDefaultPosition,
-                        const wxSize &size = wxDefaultSize );
-
-    virtual ~guListViewHeader();
-
-    int     RefreshWidth( void );
-    void    SetImageList( wxImageList * imagelist );
-
-private:
-
-    DECLARE_EVENT_TABLE()
-};
-
-class guListViewClientTimer;
-
-
-
-
-// -------------------------------------------------------------------------------- //
-// guListViewClient
-// -------------------------------------------------------------------------------- //
-class guListViewClient : public wxVListBox
-{
-  private :
-    guListView *                m_Owner;
-    guListViewHeader *          m_Header;
-    guListViewColumnArray *     m_Columns;
-    guListViewClientTimer *     m_SearchStrTimer;
-    wxString                    m_SearchStr;
-    guListViewAttr *            m_Attr;
-    int                         m_ItemHeight;
-    int                         m_HScrollPos;
-
-    void            OnPaint( wxPaintEvent &event );
-    void            AdjustDC( wxDC &dc );
-    void            OnDragOver( const wxCoord x, const wxCoord y );
-    void            OnKeyDown( wxKeyEvent &event );
-    //void            OnMouse( wxMouseEvent &event );
-    void            OnContextMenu( wxContextMenuEvent& event );
-    long            FindItem( long start, const wxString& str, bool partial );
-
-    void            OnSearchLinkClicked( wxCommandEvent &event );
-    void            OnCommandClicked( wxCommandEvent &event );
-    //wxString        GetSearchText( int Item );
-
-    void            OnDrawItem( wxDC &dc, const wxRect &rect, size_t n ) const;
-    void            DrawItem( wxDC &dc, const wxRect &rect, const int row, const int col ) const;
-    void            DoDrawItem( wxDC &dc, const wxRect &rect, const int row, const int col ) const;
-    void            OnDrawBackground( wxDC &dc, const wxRect &rect, size_t n ) const;
-    void            DrawBackground( wxDC &dc, const wxRect &rect, const int row, const int col ) const;
-    void            DoDrawBackground( wxDC &dc, const wxRect &rect, const int row, const int col ) const;
-    wxCoord         OnMeasureItem( size_t n ) const;
-    virtual wxString GetItemSearchText( const int row );
-    void            OnHScroll( wxScrollWinEvent &event );
-
-    DECLARE_EVENT_TABLE()
-
-  public :
-    guListViewClient( wxWindow * parent, const int flags, guListViewColumnArray * columns, guListViewAttr * attr );
-    ~guListViewClient();
-
-    void SetItemHeigth( const int height );
-
-    void SetHScrollbar( const int width );
-    virtual void SetScrollPos( int orientation, int pos, bool refresh = true );
-    //int  GetHScrollPosition( void );
-
-
-    friend class guListView;
-    friend class guListViewHeader;
-    friend class guListViewClientTimer;
-};
-
-
-
-
-// -------------------------------------------------------------------------------- //
 // guListViewColEdit
 // -------------------------------------------------------------------------------- //
 class guListViewColEdit : public wxDialog
@@ -482,6 +378,12 @@ void guListView::RefreshAll( int scroll )
 void guListView::RefreshLines( const int from, const int to )
 {
     m_ListBox->RefreshLines( from, to );
+}
+
+// -------------------------------------------------------------------------------- //
+void guListView::RefreshLine( const int line )
+{
+    m_ListBox->RefreshLine( line );
 }
 
 // -------------------------------------------------------------------------------- //
